# tools

./: .gitignore  .gitlab-ci.yml  .hgignore  README.md  readme.md
api_examples/: .hgignore  corrections_example.py  videowall_example.py  websocket_test.py
apidoctool/: .hgignore  build.gradle  conanfile.py  gradle.properties  nx_lint.json  readme.md
beta-builds/: daily.html  daily.xml  dirlist.sh  dirlist.xslt  readme.txt
buildenv/: README  build.src  clang_test_p_fix.patch  dump_mserver_core  fix_mutex  load_core  pack_bin_with_libs.sh  print_ms_stats  restore_cdb_dump_mysql  run  update_cloud-test  update_isd  upload_cdb  upload_cloud_module  upload_mediator  upload_vms_gateway  validate_jsons.py  win32_hook.patch
ci/: crash-inspector.py  crashmon.py  crashmonconf.py  getcr.py  parsedump.py
cm/: .gitignore  crashdb.py  crashmon.py  crashmonconf.py  dumptool.py  getcr.py  nxjira.py  opendump.bat  parsedump.py  process_client_crashes.py  run_tests.sh
coverage/: coverage.py  test_coverage.py
coverage/msvc_coverage/Converter/: CMakeLists.txt  Program.cs  frameworkVersion.ps1
coverage/msvc_coverage/Symbols/: CMakeLists.txt  framework.h  image.cpp  image.h  session.cpp  session.h  symbols.cpp  symbols.h
coverage/tests/program/: CMakeLists.txt  main.cpp
crash_analyzer/: README.md  api.py  api_test.py  crash_info.py  crash_info_test.py  dump_tool.py  dump_tool_test.py  dumptool.py  dumptool_test.py  external_api.py  external_api_test.py  monitor.py  monitor_test.py  pytest.ini  read_logs.py  requirements.txt  restore_records_file.py  utils.py  utils_test.py
customization/: .gitignore  conanfile.py  file_formats.py  fix_png.py  get_zip_from_cloud.py  requirements-frozen.txt  requirements.txt  setup.sh  sources_parser.py  upload_package.py
deployment_code/: deployment_code_tool.py  readme.md
hashstamp/: hashstamp.py
hgconvert/: cloud_portal.branchmap  cloud_portal.filemap  convert_cloud_portal.bat  convert_vms.bat
includes_scanner/: includes_scanner.py
jenkins/: git_context.py  run_custom_build.py
mercurial/: auto-rebase.py  merge-commit.py  merge_commit.py  validate-commit.py  validate_commit.py
ninja_clean/: ninja_clean.py
ninja_tool/: ninja_deps_processor.py  ninja_launcher.bat  ninja_launcher.bat.in  ninja_launcher.sh  ninja_launcher.sh.in  ninja_tool.cmake  ninja_tool.py
nx_kit/: readme.md
nx_submodule/: nx_submodule.py  nx_submodule_lib.py  readme.md
nxlib/: __init__.py  filelock.py  socklock.py
prepare_vms_update/: prepare_vms_update.py
qmldeploy/: qmldeploy.py
rdep/: .hgignore  dump_timestamps.py  platform_detection.py  rdep.py  rdep_config.py  rdep_configure.py  rdep_dependencies.py
run_qbs/: run_qbs.py
server_update_util/: updater.py
sign_over_http/: .hgignore  client.py  environment.py  readme.md  run_server.bat  server.py  server_log.yaml  setup.py  sign_binary.py  signing_server.py  signtool_interface.py  test_openssl.bat  test_signing.bat  test_signing_remotely.bat  test_signtool.bat  test_timeout.bat
sign_over_http/signtool_emulator/: CMakeLists.txt
sign_over_http/signtool_emulator/src/: main.cpp
stanley/: corrections_example.py
sysroot/: make-sysroot.py  rpi.conf  tx1.conf
taskbot/: sql
testing/: .hgignore  Vagrantfile  all.sh  auto.py  backuptest.py  bootstrap.sh  bs_clear.sh  bs_init.sh  conf.sh  cp2cont.sh  dbtest.py  dbuptest.py  fill_stor.py  fix-hostname.sh  functest.cfg  functest.py  functest_util.py  functests.cfg  gen2py.py  generator.py  legacy_main.py  license_check.py  main.py  ms_clear.sh  natcon_test.py  nattest.cfg  pipereader.py  proxytest.py  redir_test.py  rtsptests.py  runut.sh  stortest.py  streaming_test.py  stresst.py  sync.sh  sysname_test.py  testbase.py  testboxes.py  testconf.py  timetest.py  (+4 more)
testrail/: get_metric.py  timedelta_str.py
translation/: add_language.py  copy_translations.py  language_pack.py  migrate_br_to_pt.py  migrate_human_readable.py  migrate_qtbase.py  migrate_translations.py  rename_language.py  replace_translations.py  translations_crowdin.py  update_translations.py  validate_translations.py  validation_rules.py
update_utils/: README.md  api_tool.py  update_maker.py  update_tool.ipynb
util/: add_language.py  android-tool.sh  bpi  bpi-tool.sh  bpi.exp  branches.py  calc_files.py  check_version.py  checkfiles.py  clear-ms.sh  cloud_layouts_mock.py  cmake.sh  color_theme.py  colorize_branches.py  common_module.py  console_encoding.bat  customizations.py  edge1-tool.sh  find-running-tests.py  generate_msvc_env.py  generic_event.py  get_client_pdb.py  git_rebase_merge.sh  grep_non_ascii_src.sh  hddtest.sh  hg.sh  hg_module.py  inkscape-export.py  junkshop-fails.py  linux-tool.sh  logging_server.py  logging_server_config.yaml  make_icons.py  makepro.py  merge_dev.bat  merge_dev.py  merge_dev_git.py  metadata_manifest_tool.py  migrate_translations.py  msvc_env.sh  (+45 more)
valgrind/: args.sh  huck-service-ms.sh  memcheck-ms.supp  run-ms.sh
verify_globs/: .editorconfig  CMakeLists.txt  build_release.sh
verify_globs/exe/src/: verify_globs.cpp
verify_globs/lib/: CMakeLists.txt
verify_globs/lib/src/: directory_scanner.cpp  directory_scanner.h  file_exception.h  generic_directory_scanner.cpp  io_exception.h  parse_exception.h  verifier.cpp  verifier.h  win_directory_scanner.cpp
vms_4.3.0_R2_open/: readme.md
workflow_police/: Dockerfile  Dockerimage.properties  README.md  config.yaml  jira_tools.py  police.app  requirements.txt  utils.py  workflow_police.py
zenoss/: Dockerfile  readme.txt
(+1705 files in other folders)
